# Kamihime-Project-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test.ipynb
app/: main.py
app/static/: wiki.css  wiki.js
app/templates/: base.html  character.html  element.html  index.html
kami/: all_kami_data.json  all_kami_data.jsonl  build_index.py  chatbot.py  crawler.py  data_loader.py  data_store.py  kamihime_raw.jsonl  paths.py  pipeline.py  translation_glossary.json  translator.py
kami/data/: kamihime_light_raw.jsonl  kamihime_thunder_raw.jsonl  kamihime_water_raw.jsonl  kamihime_wind_raw.jsonl
kami/data/raw/: kamihime_dark_raw.jsonl  kamihime_fire_raw.jsonl  kamihime_light_raw.jsonl  kamihime_thunder_raw.jsonl  kamihime_water_raw.jsonl  kamihime_wind_raw.jsonl
kami/data/translated/: kamihime_dark_en.jsonl  kamihime_fire_en.jsonl  kamihime_light_en.jsonl  kamihime_thunder_en.jsonl  kamihime_water_en.jsonl  kamihime_wind_en.jsonl
kami/data/translated/deepl/: kamihime_dark_en.jsonl  kamihime_fire_en.jsonl  kamihime_light_en.jsonl  kamihime_thunder_en.jsonl  kamihime_water_en.jsonl  kamihime_wind_en.jsonl
scripts/: test_translation.py
tests/: test_chatbot.py  test_crawler.py  test_translator.py
