[project]
name = "kamiwiki"
version = "0.1.0"
description = "FastAPI wiki and crawler for Kamihime Project character data"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "jinja2>=3.1,<4",
    "python-dotenv>=1,<2",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
translation = [
    "accelerate>=1.2,<2",
    "autoawq==0.2.9; sys_platform == 'linux'",
    "torch==2.6.0",
    "transformers==4.51.3",
]
rag = [
    "faiss-cpu>=1.9,<2",
    "langchain-community>=0.4,<0.5",
    "sentence-transformers>=5,<6",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = ["."]
